@@ -1,4 +1,4 @@
-From 7f637512e0123c04526738f2979928010b2ea7cc Mon Sep 17 00:00:00 2001
+From b2c21a74df3f268c4fafedfeb3ff36b8ca341fff Mon Sep 17 00:00:00 2001
 From: Stephan Linz <linz@li-pro.net>
 Date: Fri, 13 Jul 2012 19:52:52 +0200
 Subject: [PATCH] sf: stmicro: support JEDEC standard two-byte signature
