@@ -1,4 +1,4 @@
-From 0754e759abcbb2577c9a5b1490e71275c95d501c Mon Sep 17 00:00:00 2001
+From 7be1e270088e170e4073c7518f15917a2815d988 Mon Sep 17 00:00:00 2001
 From: Stephan Linz <linz@li-pro.net>
 Date: Fri, 13 Jul 2012 19:53:42 +0200
 Subject: [PATCH] sf: stmicro: add support N25Q128 parts
