@@ -1,3 +1,7 @@
+2012-07-31	Stephan Linz <linz@li-pro.net>
+
+	* common: adapt latest patch sets to u-boot-2012.07
+
 2012-07-29	Stephan Linz <linz@li-pro.net>
 
 	* common: adapt latest patch sets to linux-3.3
